src/app/components/address-book/address-book.component.scss
.filter-input{
    padding: 3px;
}

.table-container{
    margin: 0 15px 15px 15px;

    .contacts-table{
        width: 100%;
        
        .column{
            padding-right: 15px;
            
            &.header{
                background: var(--ion-background-color);
            }

            &.img-column{
                width: 70px;
            }

            &.phone-column{
                width: 130px;
            }

            .contact-img{
                height: 36px;
                width: 36px;
                border-radius: 50%;
                object-fit: contain;
                margin: 5px 0 0 4px;
            }

            .img-icon{
                font-size: 40px;
                padding-top: 3px;
            }

            .note-icon{
                font-size: 25px;
            }
        }
    }
}

.create-contact-button{
    margin-top: -10px;
    margin-right: 10px;
}

